kubernetes/apps/home/homepage/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    external-dns.alpha.kubernetes.io/target: default.internal.javiersant.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://homepage.default.internal.javiersant.com"
    gethomepage.dev/description: Homepage Dashboard
    gethomepage.dev/group: Home
    gethomepage.dev/icon: https://avatars.githubusercontent.com/u/122929872?v=4
    gethomepage.dev/name: Homepage
    gethomepage.dev/pod-selector: ""
    gethomepage.dev/weight: 195
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage.default.internal.javiersant.com`)
      kind: Rule
      services:
        - kind: Service
          name: homepage
          port: 3000
  tls:
    secretName: wildcard-javiersant-com-tls
